service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: usuario
  labels:
    app: usuario
    services: usuario
spec:
  type: NodePort
  selector:
    app: usuario
  ports:
  - name: http
    port: 8990
    nodePort: 30001
    #protocol: TCP
