service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-usuario
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8084
    targetPort: 8084
    protocol: TCP
  selector:
    app: api-usuario
