virtual-service-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usuario
spec:
  hosts:
  - usuario
  http:
  - route:
    - destination:
        host: usuario
        #subset: version-v2
    retries:
      attempts: 3
      #perTryTimeout: 500ms
      perTryTimeout: 3s
      #retryOn: "500,502,503,504"
