virtual-service_100.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usuario
spec:
  hosts:
  - usuario
  http:
  - route:
    - destination:
        host: usuario
        subset: version-v1
      weight: 100
